--- a/public/scss/main.scss
+++ b/public/scss/main.scss
@@ -1,2 +1,34 @@
 @import 'layout';
 @import 'navigation';
+
+.grid-container {  display: grid;
+    grid-template-columns: 1fr 2.5fr 1fr;
+    grid-template-rows: 0.7fr 0.8fr 1fr 1fr 0.5fr 2fr 1fr;
+    gap: 1px 1px;
+    grid-auto-flow: row;
+    grid-template-areas:
+      "header header header"
+      "nav-bar nav-bar nav-bar"
+      "studbud-bar studbud-bar studbud-bar"
+      "pomodoro-timer pomodoro-timer pomodoro-timer"
+      "progress-bar progress-bar progress-bar"
+      "kanban-board kanban-board kanban-board"
+      "footer footer footer";
+  }
+  
+  .header { grid-area: header; 
+
+    }
+  
+  .nav-bar { grid-area: nav-bar; }
+  
+  .studbud-bar { grid-area: studbud-bar; }
+  
+  .pomodoro-timer { grid-area: pomodoro-timer; }
+  
+  .progress-bar { grid-area: progress-bar; }
+  
+  .kanban-board { grid-area: kanban-board; }
+  
+  .footer { grid-area: footer; }
+  
