--- a/public/scss/navigation.scss
+++ b/public/scss/navigation.scss
@@ -1,3 +1,28 @@
-nav {
+.nav-bar {
     display: flex;
+
+    #nav-line {
+        // width: 12vw;
+        // height: 1vh;
+        width: 80px;
+        height: 10px;
+        color: #000000;
+    }
 }
+
+
+
+
+
+
+
+// .modal {
+//     position: absolute;
+//     top: 5rem;
+//     left: 50%;
+//     display: none;
+// }
+
+// .modal.is-active {
+//     display:block;
+// }
