--- a/public/scss/navigation.scss
+++ b/public/scss/navigation.scss
@@ -1,28 +1,27 @@
 .nav-bar {
-    display: flex;
-
-    #nav-line {
-        // width: 12vw;
-        // height: 1vh;
-        width: 80px;
-        height: 10px;
-        color: #000000;
+    
+    #nav-line{
+    height: 0.1vh;
+    opacity: 0.5;
+  
+    background: #212943;    
     }
+  
+    #nav-toggle {
+    height: 0.5vh;
+    width: 35vw;
+  
+    background: #212943;    
+    }
+  
+    .nav-title {
+    display: flex;
+    justify-content: space-around;
+
+        h3 { 
+            font-size: 0.8rem;
+        }
+    }
+
+  
 }
-
-
-
-
-
-
-
-// .modal {
-//     position: absolute;
-//     top: 5rem;
-//     left: 50%;
-//     display: none;
-// }
-
-// .modal.is-active {
-//     display:block;
-// }
