--- a/public/scss/timer.scss
+++ b/public/scss/timer.scss
@@ -1,23 +1,25 @@
 /* Entire timer section */
 .timer {
     background: white;
-    margin: 24px;
 
-    font-family: sans-serif;
     display: inline-block;
+    width: 100%;
     /*   display: flex;
     flex-direction: row; */
-    padding: 24px 32px;
+    padding: 12px 24px;
+    // padding: 1rem 2rem;
     border-radius: 7px;
 
     border-style: solid;
     border-color: #212943; 
     border-width: 0.5px;
+
+    text-align: center;
     
 }
   
   /* Minutes and Seconds of timer */
-.timer-section{
+.timerSection{
     display: flex;
     justify-content: center;
     align-items: center;
@@ -28,42 +30,45 @@ h4 {
     font-family: 'Nunito';
     font-weight: 400; 
     font-size: 2rem;
-    font-weight: bold;    
 
 }
   
   
 /* Styling the button section */
-.button-section {
+.buttonSection {
     display: flex;
     justify-content: center;
     align-items: center;
   }
   
-  /* Styling the buttons themselves */
-.timer-btn {
+  /* Styling all buttons consistently*/
+.timerButton {
     width: 3rem;
     height: 3rem;
     margin-left: 0.5rem;
     border-radius: 50%;
     border: none;
     background: white;
-    color: #7C99FC;
     cursor: pointer;
     
   }
   
-.timer-btn_start {
+#timerButtonStart {
     color: #7CFC95;
   
 }
 
+#timerButtonReset {
+    color: #7C99FC;
+  
+}
+
 //Need to add this class using javascript 
-.timer-btn_stop{
+#timerButtonStop{
     color: #FC7C7C;
 }
 
-.timer_complete_message {
+.timerCompleteMessage {
     display: block;
     padding: 1rem;
     background: #7C99FC; 
@@ -72,12 +77,16 @@ h4 {
     text-align: center;  
   
     font-family: 'Nunito';
-    font-weight: 300;  
+    font-weight: 300; 
+    font-size: 1rem; 
   
     // Position of message
     z-index: 2;
-    margin-left: auto;
-    margin-right: auto;
+    position: absolute;
+    left: 20%;
+    top: 20%;
+    // margin-left: auto;
+    // margin-right: auto;
     width: 60%;
     
     // Animations for the timer 
