--- a/public/scss/main.scss
+++ b/public/scss/main.scss
@@ -3,6 +3,7 @@
 @import 'tasklist';
 @import 'timer';
 @import 'studbud_bar';
+@import 'music';
 
 
 .logo {
@@ -31,3 +32,4 @@ p {
     font-family: 'Nunito';
     font-weight: 200;
 }
+
