--- a/public/scss/studbud_bar.scss
+++ b/public/scss/studbud_bar.scss
@@ -1,6 +1,7 @@
 .studbud-bar {
     background: white;
-    padding: 24px 32px;
+    // padding: 24px 32px;
+    padding: 3vh 3vw;
     border-radius: 7px;
     width: 100%;
 
