--- a/public/scss/tasklist.scss
+++ b/public/scss/tasklist.scss
@@ -6,7 +6,7 @@ label {
 
 .board {
     background: white;
-    padding: 24px 32px;
+    padding: 3vh 3vw;
     border-radius: 7px;
     // width: 100%;
 
