--- a/public/scss/timer.scss
+++ b/public/scss/timer.scss
@@ -6,7 +6,7 @@
     width: 100%;
     /*   display: flex;
     flex-direction: row; */
-    padding: 12px 24px;
+    padding: 3vh 3vw;
     // padding: 1rem 2rem;
     border-radius: 7px;
 
