--- a/public/scss/tasklist.scss
+++ b/public/scss/tasklist.scss
@@ -6,7 +6,7 @@ label {
 
 .board {
     background: white;
-    padding: 3vh 3vw;
+    padding: 1vh vw;
     border-radius: 7px;
     // width: 100%;
 
@@ -15,15 +15,60 @@ label {
     border-width: 0.5px;
 
     display: inline-block;
-    width: 100%;
+    width: 120%;
 
 }
 
-span {
+#taskList {
+    list-style-type: none;
+    padding: 0;
+    display: flex;
+    flex-direction: column;
+}
+
+.taskItem {
+
     display: flex;
     flex-direction: row;
-    justify-content: space-between;
+
+    justify-content: space-evenly;
+    align-items: center;
+
+    border-style: solid;
+    border-color: #212943; 
+    border-width: 0.5px;
+    // background: #7C99FC;
+    padding: 1vh;
+    border-radius: 7px;
+
+    //Styling based on the priority rating 
+    // This funciton doesn't work - please see tasklist.js. 
+    // Feedback here would be appreciated. 
+
+    .priorityAttLow {
+        color: #f2665c;
+
+    }
+
+    .priorityAttMed {
+        color:#f2bb5c;
+    }
+
+    .priorityAttHigh {
+        color:#f2e05c;
+
+    }
+
 }
+
+.draggable {
+    cursor: move;
+}
+
+.taskTitle {
+    font-weight: 400; 
+}
+
 
 #delButton {
     background: white;
@@ -31,7 +76,6 @@ span {
     border-style: solid;
     border-width: 0.5px;
     border-radius: 7px;
-    //padding is wack come back 
     padding: 5px;
     border-color: #212943;
     // margin: auto;
@@ -49,6 +93,8 @@ span {
     border-color: #212943; 
     border-width: 0.5px;
     border-radius: 3rem;
+    width: 3vh;
+    height: 3vh;
     
 }
 
@@ -66,5 +112,52 @@ span {
     border-width: 0.5px;
     border-radius: 3rem;
     box-shadow: 0 0 2rem #abb7e9;
+
+    //Styling the actual measure of completion of tasks 
+    .progressBarMeasure {
+
+        height: 0.1vh;
+        display: flex;
+        justify-content: center;
+        align-items: start;
+        padding: 1rem;
+        color: #7C99FC;
+        // border-color: #7C99FC; 
+        border-width: 0.5px;
+        border-radius: 3rem;
+        
+        // width: 50%;
+    }
+
+}
+
+#emptyList {
+    text-align: center;
+}
+
+.draggable .draggingCurrent {
+    opacity: 0.5;
+    color: #7C99FC;
+
+}
+
+#itemSubmit {
+    display: flex;
+    justify-content: center;
+
+    background: white;
+    color: 7C99FC;
+
+    font-family: 'Nunito';
+    font-weight: 300; 
+    font-size: 1rem; 
+
+    transition: 0.5s;
+    letter-spacing: 1px;
+    border-radius: 8px;
+    border-color: #7C99FC;
+    border-width: 2px;
+
+
 
 }
